--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <!-- 액션바 제거 및 타이틀바 삭제 -->
+        <item name = "windowActionBar">false</item>
+        <item name = "windowNoTitle">true</item>
     </style>
 </resources>
