--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,58 +10,290 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ToggleButton
-        android:id="@+id/gasToggle"
+    <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginBottom="80dp"
-        android:textOff="가스밸브"
-        android:textOn="가스밸브"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/lightToggle" />
+        android:layout_marginTop="15dp"
+        android:text="가전을 제어하세요."
+        android:textColor="#090909"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/division2" />
 
-    <ToggleButton
-        android:id="@+id/windowToggle"
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="80dp"
-        android:textOff="창문"
-        android:textOn="창문"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="25dp"
+        android:text="더보기  >"
+        android:textColor="#C1B7B7"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/gasToggle" />
+        app:layout_constraintTop_toBottomOf="@+id/division2" />
 
-    <ToggleButton
-        android:id="@+id/lightToggle"
+    <View
+        android:id="@+id/division2"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="5dp"
+        android:background="#E4E0E0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/modes"></View>
+
+    <TextView
+        android:id="@+id/humiTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginBottom="80dp"
-        android:textOff="전등"
-        android:textOn="전등"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/airconToggle" />
+        android:layout_marginTop="17dp"
+        android:text="xx %"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/humiProgressBar"
+        app:layout_constraintTop_toBottomOf="@+id/tempTextView" />
+
+    <TextView
+        android:id="@+id/tempTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="22dp"
+        android:text="xx 'C"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/tempProgressBar"
+        app:layout_constraintTop_toBottomOf="@+id/loginNameText" />
+
+    <ProgressBar
+        android:id="@+id/humiProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="180dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:max="100"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/tempProgressBar" />
+
+
+    <View
+        android:id="@+id/division"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="5dp"
+        android:background="#E4E0E0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/humiProgressBar"></View>
+
+    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
+        android:id="@+id/modes"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="10dp"
+        app:alignItems="stretch"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/division">
+
+        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+            android:id="@+id/outGoingMode"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            app:layout_flexGrow="1"
+            app:toggle_icon="@drawable/outdoor"
+            app:toggle_iconPaddingHorizontal="5dp"
+            app:toggle_iconPaddingTop="5dp"
+            app:toggle_selectedBackgroundColor="#5e6fed"
+            app:toggle_selectedTextColor="@android:color/white"
+            app:toggle_iconGravity="top|center"
+            app:toggle_paddingTop="45dp"
+            app:toggle_text="실내 모드"
+            app:toggle_textSize="13dp"
+            app:toggle_textGravity="bottom|center"
+            app:toggle_textPaddingBottom="20dp"
+            tools:layout_editor_absoluteX="10dp" />
+
+        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+            android:id="@+id/inputMode"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            app:layout_flexGrow="1"
+            app:toggle_icon="@drawable/indoor"
+            app:toggle_iconPaddingHorizontal="5dp"
+            app:toggle_iconPaddingTop="5dp"
+            app:toggle_selectedBackgroundColor="#5e6fed"
+            app:toggle_selectedTextColor="@android:color/white"
+            app:toggle_iconGravity="top|center"
+            app:toggle_paddingTop="45dp"
+            app:toggle_text="외출 모드"
+            app:toggle_textSize="13dp"
+            app:toggle_textGravity="bottom|center"
+            app:toggle_textPaddingBottom="20dp"
+            tools:layout_editor_absoluteX="100dp" />
+
+        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+            android:id="@+id/testMode"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            app:layout_flexGrow="1"
+            app:toggle_icon="@drawable/sleep"
+            app:toggle_iconPaddingHorizontal="5dp"
+            app:toggle_iconPaddingTop="5dp"
+            app:toggle_selectedBackgroundColor="#5e6fed"
+            app:toggle_selectedTextColor="@android:color/white"
+            app:toggle_iconGravity="top|center"
+            app:toggle_paddingTop="45dp"
+            app:toggle_text="슬립 모드"
+            app:toggle_textSize="13dp"
+            app:toggle_textGravity="bottom|center"
+            app:toggle_textPaddingBottom="20dp"
+            tools:layout_editor_absoluteX="200dp" />
+
+        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+            android:id="@+id/test2Mode"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            app:layout_flexGrow="1"
+            app:toggle_icon="@drawable/eco"
+            app:toggle_iconPaddingHorizontal="5dp"
+            app:toggle_iconPaddingTop="5dp"
+            app:toggle_paddingHorizontal="3dp"
+            app:toggle_selectedBackgroundColor="#5e6fed"
+            app:toggle_selectedTextColor="@android:color/white"
+            app:toggle_iconGravity="top|center"
+            app:toggle_paddingTop="45dp"
+            app:toggle_text="에코 모드"
+            app:toggle_textSize="13dp"
+            app:toggle_textGravity="bottom|center"
+            app:toggle_textPaddingBottom="20dp"
+            tools:layout_editor_absoluteX="300dp" />
+
+    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>
+
+    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
+        android:id="@+id/appliances"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="10dp"
+        app:alignItems="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/division2"
+        app:toggle_requiredAmount="0"
+        app:toggle_selectableAmount="4">
+
+        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+            android:id="@+id/aircon"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            app:layout_flexGrow="1"
+            app:toggle_icon="@drawable/aircon"
+            app:toggle_iconPaddingHorizontal="5dp"
+            app:toggle_iconPaddingTop="5dp"
+            app:toggle_selectedBackgroundColor="#5e6fed"
+            app:toggle_selectedTextColor="@android:color/white"
+            app:toggle_iconGravity="top|center"
+            app:toggle_paddingTop="45dp"
+            app:toggle_text="  에어컨  "
+            app:toggle_textSize="13dp"
+            app:toggle_textGravity="bottom|center"
+            app:toggle_textPaddingBottom="20dp"
+            tools:layout_editor_absoluteX="10dp" />
+
+        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+            android:id="@+id/light"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            app:layout_flexGrow="1"
+            app:toggle_icon="@drawable/light"
+            app:toggle_iconPaddingHorizontal="5dp"
+            app:toggle_iconPaddingTop="5dp"
+            app:toggle_selectedBackgroundColor="#5e6fed"
+            app:toggle_selectedTextColor="@android:color/white"
+            app:toggle_iconGravity="top|center"
+            app:toggle_paddingTop="45dp"
+            app:toggle_text="  무드등  "
+            app:toggle_textSize="13dp"
+            app:toggle_textGravity="bottom|center"
+            app:toggle_textPaddingBottom="20dp"
+            tools:layout_editor_absoluteX="100dp" />
+
+        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+            android:id="@+id/gasvalve"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            app:layout_flexGrow="1"
+            app:toggle_icon="@drawable/gasvalve"
+            app:toggle_iconPaddingHorizontal="5dp"
+            app:toggle_iconPaddingTop="5dp"
+            app:toggle_selectedBackgroundColor="#5e6fed"
+            app:toggle_selectedTextColor="@android:color/white"
+            app:toggle_iconGravity="top|center"
+            app:toggle_paddingTop="45dp"
+            app:toggle_text="가스 밸브"
+            app:toggle_textSize="13dp"
+            app:toggle_textGravity="bottom|center"
+            app:toggle_textPaddingBottom="20dp"
+            tools:layout_editor_absoluteX="200dp" />
+
+        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+            android:id="@+id/window"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            app:layout_flexGrow="1"
+            app:toggle_icon="@drawable/window"
+            app:toggle_iconPaddingHorizontal="5dp"
+            app:toggle_iconPaddingTop="5dp"
+            app:toggle_paddingHorizontal="6dp"
+            app:toggle_selectedBackgroundColor="#5e6fed"
+            app:toggle_selectedTextColor="@android:color/white"
+            app:toggle_iconGravity="top|center"
+            app:toggle_paddingTop="45dp"
+            app:toggle_text="  창 문  "
+            app:toggle_textSize="13dp"
+            app:toggle_textGravity="bottom|center"
+            app:toggle_textPaddingBottom="20dp"
+            tools:layout_editor_absoluteX="300dp" />
+    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="15dp"
+        android:text="습도"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/airLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="20dp"
-        android:text="공기 상태 : XX"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/temperature" />
-
-    <TextView
-        android:id="@+id/temperature"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="30dp"
-        android:text="현재 온도"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="15dp"
+        android:text="미세먼지 : XX"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/weather" />
 
@@ -69,9 +301,9 @@
         android:id="@+id/weather"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="45dp"
+        android:layout_marginEnd="15dp"
         android:text="날씨"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/weatherView" />
 
@@ -79,10 +311,11 @@
         android:id="@+id/loginNameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="35dp"
+        android:singleLine="true"
         android:text="XXX님 안녕하세요?"
-        android:textSize="25sp"
+        android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -90,33 +323,55 @@
         android:id="@+id/weatherView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:src="@drawable/sunny"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button"
+    <ProgressBar
+        android:id="@+id/tempProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="180dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:max="40"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/loginNameText" />
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="실행"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="20dp"
+        android:text="온도"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginNameText" />
 
-    <ToggleButton
-        android:id="@+id/airconToggle"
+    <TextView
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="80dp"
-        android:textOff="에어컨"
-        android:textOn="에어컨"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/lightToggle"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="15dp"
+        android:text="모드를 선택하세요."
+        android:textColor="#090909"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/division" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="25dp"
+        android:text="더보기  >"
+        android:textColor="#C1B7B7"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/division" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
