--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -5,10 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="8dp"
     tools:context=".SecondFragment">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fillViewport="true"
@@ -16,15 +17,91 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_appliance"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/nestedScrollView"
+        app:layout_constraintTop_toTopOf="@id/nestedScrollView"
+        android:padding="16dp">
+
+
+        <View
+            android:id="@+id/division_Aircon"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginTop="35dp"
+            android:background="#E4E0E0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/textView_Aircon"></View>
+
+        <ImageView
+            android:id="@+id/imageView_Aircon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/aircon" />
+
+        <Switch
+            android:id="@+id/switch_Aircon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/textView_Aircon"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/textView_Aircon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="에어컨"
+            android:textColor="#000000"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft = "60dp"
+            android:textSize = "16dp"
+            app:layout_constraintTop_toTopOf="@id/imageView_Aircon"
+            app:layout_constraintStart_toStartOf="@id/imageView_Aircon"
+            />
+
+        <TextView
+            android:id="@+id/textView_AirPower"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="25dp"
+            android:text="바람세기"
+            android:textColor="#000000"
+            android:textSize="14dp"
+            app:layout_constraintStart_toStartOf="@id/imageView_Aircon"
+            app:layout_constraintTop_toTopOf="@id/division_Aircon" />
+
+        <SeekBar
+            android:id="@+id/seekBar_AirconPower"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="26dp"
+            android:layout_marginStart="60dp"
+            app:layout_constraintStart_toEndOf = "@id/textView_AirPower"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/division_Aircon"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
