--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -110,6 +110,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
+            android:tag = "0"
             app:layout_flexGrow="1"
             app:toggle_icon="@drawable/outdoor"
             app:toggle_iconPaddingHorizontal="5dp"
@@ -129,6 +130,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
+            android:tag = "1"
             app:layout_flexGrow="1"
             app:toggle_icon="@drawable/indoor"
             app:toggle_iconPaddingHorizontal="5dp"
@@ -149,6 +151,7 @@
             android:layout_height="200dp"
             android:gravity="center"
             app:layout_flexGrow="1"
+            android:tag = "2"
             app:toggle_icon="@drawable/sleep"
             app:toggle_iconPaddingHorizontal="5dp"
             app:toggle_iconPaddingTop="5dp"
@@ -167,6 +170,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
+            android:tag = "3"
             app:layout_flexGrow="1"
             app:toggle_icon="@drawable/eco"
             app:toggle_iconPaddingHorizontal="5dp"
@@ -203,6 +207,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
+            android:tag = "5"
             app:layout_flexGrow="1"
             app:toggle_icon="@drawable/aircon"
             app:toggle_iconPaddingHorizontal="5dp"
@@ -222,7 +227,9 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
+            android:tag = "6"
             app:layout_flexGrow="1"
+
             app:toggle_icon="@drawable/light"
             app:toggle_iconPaddingHorizontal="5dp"
             app:toggle_iconPaddingTop="5dp"
@@ -241,6 +248,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
+            android:tag = "7"
             app:layout_flexGrow="1"
             app:toggle_icon="@drawable/gasvalve"
             app:toggle_iconPaddingHorizontal="5dp"
@@ -260,6 +268,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
+            android:tag = "8"
             app:layout_flexGrow="1"
             app:toggle_icon="@drawable/window"
             app:toggle_iconPaddingHorizontal="5dp"
